--- a/styles/dark.css
+++ b/styles/dark.css
@@ -1,12 +1,32 @@
-/*
-  Специально для тёмной темы при наличии класса,
-  здесь окажутся стили, которые нужно переопределить принудительно,
-  переключая тему
-*/
+/*Специально для тёмной темы при наличии класса, здесь окажутся стили, которые нужно переопределить принудительно, переключая тему*/
 
 .page.theme_dark {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
+  /*сохраните этот селектор в приведённом виде.Так стили написанные ниже будут иметь больший вес,чем стили в медиазапросе предпочтений пользователя*/
+  --bg-color: #000028;
+  --accent-color: #ff0070;
+  --accent-color-text: rgba(255, 0, 112, 1);
+  --accent-color-button: rgba(255, 0, 112, 0.4);
+  --text-color: #f1b2ce;
+  --text-color-title: #000028;
+  --accent-text-color-title: #db00ff;
+  --main-font: 'IBM Plex mono';
+  --cover-image: url(../images/cover-image-dark.png);
+
+  .header__decor {
+    content: " ";
+    color: var(--accent-color);
+  }
+
+  .header__decor::after {
+    content: "";
+    display: inline-block;
+    margin-inline-start: 10px;
+    margin-block-end: 3px;
+    inline-size: 9px;
+    block-size: 9px;
+    background-color: var(--accent-color);
+    box-shadow: 0px 0px 4px 2px var(--accent-color);
+    border-radius: 50%;
+  }
+  
 }
