--- a/styles/light.css
+++ b/styles/light.css
@@ -1,12 +1,45 @@
-/*
-  Специально для светлой темы при наличии класса.
+/*Специально для светлой темы при наличии класса.
   Здесь окажутся стили, которые нужно переопределить принудительно,
-  переключая тему
-*/
+  переключая тему*/
+/*
+} */
+
+:root.theme-light {
+  /* сохраните этот селектор в приведённом виде.Так стили написанные ниже будут иметь больший вес,чем стили в медиазапросе предпочтений пользователя */ 
+  --bg-color: #fff1f7;
+  --accent-color: #ff8dcb;
+  --accent-color-text: #353430;
+  --text-color: #353430;
+  --text-color-title: #353430;
+  --accent-text-color-title: #ffc2e6;
+  --cover-image: url(../images/cover-image-light.png);
+}
 
 .page.theme_light {
   /* сохраните этот селектор в приведённом виде.
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+}
+
+@media (prefers-color-scheme: light) {
+  :root {
+    --bg-color: #fff1f7;
+    --accent-color: #ff8dcb;
+    --accent-color-text: rgba(53, 52, 48, 1);
+    --accent-color-button: rgba(53, 52, 48, 0.4);
+    --text-color: #353430;
+    --text-color-title: #353430;
+    --accent-text-color-title: #ffc2e6;
+    --cover-image: url(../images/cover-image-light.png);
+  }
+
+  .header__decor{
+    color: transparent;
+  }
+  .header__decor::after{
+    content: "";
+    background-color:  transparent;
+    box-shadow: 0px 0px 4px 2px  transparent;
+  }
 }
