--- a/styles/variables.css
+++ b/styles/variables.css
@@ -2,3 +2,15 @@
   Переменные для вашего проекта
   и их переопределение под различные устройства
 */
+
+:root {
+  --bg-color: #000028;
+  --accent-color: #ff0070;
+  --accent-color-text: rgba(255, 0, 112, 1);
+  --accent-color-button: rgba(255, 0, 112, 0.4);
+  --text-color: #f1b2ce;
+  --text-color-title: #000028;
+  --accent-text-color-title: #db00ff;
+  --main-font: 'IBM Plex mono';
+  --cover-image: url(../images/cover-image-dark.png);
+}
