--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,6 @@
 /* Основные стили проекта. Это стили для темы, которую вы верстаете первой. */
-
+/* сохраните в разметке и стилях класс page. На его основе работает скрипт. */
 .page {
-  /* сохраните в разметке и стилях класс page. На его основе работает скрипт. */
   color: var(--text-color, #f1b2ce);
   font-family: var(--main-font, sans-serif); 
   background-color: var(--bg-color, #000028);
@@ -20,7 +19,7 @@
   height: 100vh;
   min-height: 668px;
   grid-template-rows: 1fr auto 1fr;
-  margin-bottom: 38px;
+  margin-bottom: 40px;
 }
 
 .decorated-zone { 
@@ -76,7 +75,7 @@
 
 .header__title {
   color: var(--accent-text-color-title);
-  text-shadow: 4px 4px 0px var(--accent-color);
+  text-shadow: 3px 5px 0px var(--accent-color);
   font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
   grid-row: 2/3;
   line-height: 82.5%;
@@ -182,7 +181,7 @@
   width: 100%;
 }
 
-.gallery > img {
+.gallery > img{
   width: 100%;
   height: 100%;
   object-fit: cover;
@@ -220,6 +219,10 @@
   display: block;
   line-height: 82.5%;
   color: var(--accent-text-color-title, #db00ff);
+}
+
+.footer__title {
+  text-shadow: 2px 2px 0px var(--accent-color);
 }
 
  @media (width >= 768px) {
