--- a/styles/light.css
+++ b/styles/light.css
@@ -40,3 +40,12 @@
 
 }
 
+@media (prefers-color-scheme: light) and (width>= 1024px) {
+  .header__title {
+    text-shadow: 3px 5px 0px #ff0070;
+  }
+
+  .footer__title {
+    text-shadow: 2px 2px 0px #ff0070;
+  }
+}
