--- a/styles/style.css
+++ b/styles/style.css
@@ -20,7 +20,7 @@
   margin-bottom: 40px;
 }
 
-.decorated-zone { 
+.decorated-zone {
   padding: 10px;
   box-sizing: border-box;
   position: relative;
@@ -112,8 +112,11 @@
   border: none;
   text-transform: lowercase;
   color: var(--accent-color-text);
-  text-align: center;
   inline-size: 70px;
+  block-size: 26px;
+  font-size: 18px;
+  line-height: 102%;
+  text-align: center;
   cursor: pointer;
 }
 
