--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 .page {
   color: var(--text-color, #f1b2ce);
-  font-family: var(--main-font, sans-serif); 
+  font-family: var(--main-font, monospace); 
   background-color: var(--bg-color, #000028);
   font-size: 18px;
   font-weight: 400;
@@ -14,10 +14,9 @@
 .header {
   display: grid;
   width: 100%;
-  height: 100vh;
-  min-height: 668px;
+  min-height: max(668px, 100vh);
   grid-template-rows: 1fr auto 1fr;
-  margin-bottom: 40px;
+  margin-block-end: 40px;
 }
 
 .decorated-zone {
@@ -28,11 +27,13 @@
 
 .header__decor {
   position: absolute;
+  display: block;
   right: 19px;
   top: 10px;
   font-weight: 400;
   line-height: 139%;
   color: var(--accent-color);
+  text-transform: uppercase;
 }
 
 .header__decor::after {
@@ -83,13 +84,13 @@
   background-color: var(--accent-color);
   color: var(--text-color-title, #000028);
   font-weight: bold;
+  font-size: inherit;
 }
 
 .header__text {
   grid-row: 3/4;
   display: block;
-  width: 50%;
-  min-width: 355px;
+  width: 100%;
   line-height: 130%;
   align-self: center;
 }
@@ -122,6 +123,7 @@
 
 .header__theme-menu-button:hover {
   border: 1px solid var(--accent-color-button);
+  transition: 5ms;
 }
 
 .header__theme-menu-button:focus {
@@ -144,7 +146,8 @@
 
 .main {
   padding: 0 10px;
-  display: grid;
+  display: flex;
+  flex-direction: column;
   gap: 50px;
 }
 
@@ -159,8 +162,15 @@
   font-size: 18px;
 }
 
+.main__content-article {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
 .main__content-text {
-  display: grid;
+  display: flex;
+  flex-direction: column;
   gap: 10px;
 }
 
@@ -179,7 +189,6 @@
 .gallery {
   display: grid;
   row-gap: 10px;
-  width: 100%;
 }
 
 .gallery > img {
@@ -191,8 +200,7 @@
 
 .footer {
   margin-top: 42px;
-  height: 100vh;
-  min-height: 667px;
+  min-height: max(668px, 100vh);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -205,6 +213,7 @@
 
  .accent-text:hover {
   border-bottom: 1px solid var(--text-color);
+  transition: transform 4s 1s;
  }
 
  .accent-text:focus {
@@ -235,19 +244,16 @@
   }
   
   .decorated-zone::after {
-    content: "";
-    position: absolute;
     left: 20px;
     bottom: 20px;
   }
 
   .header {
-    margin-bottom: 60px;
+    margin-block-end: 60px;
+    min-height: max(1024px, 100vh);
   }
 
   .header__decor {
-    content: " ";
-    position: absolute;
     right: 29px;
     top: 20px;
   }
@@ -255,8 +261,7 @@
   .header__title {
     font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
     position: relative;
-    inline-size: 100%;
-    inset-inline-end: 0px;
+    inset-inline-end: 20px;
   }
 
   .header__text {
@@ -266,33 +271,48 @@
 
   .main {
     padding: 0 20px;
-    gap: 80px;
+    gap: 81px;
   }
 
   .main__content {
+    grid-template-columns: 1fr 2fr;
+    grid-template-rows: auto;
+  }
+  
+  .main__content:nth-child(2) .main__content-title {
+    grid-row: 1/ 1 span;
+    grid-column: 1/2;
+    display: flex;
+    flex-direction: column;
     gap: 20px;
   }
 
-  .main__content-text {
-    gap: 10px;
+  .main__content:nth-child(2) .main__content-article {
+    grid-row: 2/-1;
+    grid-column: 1/-1;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
   }
 
   .main__content:nth-child(2) .main__content-text {
     grid-column: 1/-1;
   }
 
-  .main__content:nth-child(3) .main__content-text {
-    grid-column: 2/-1;
+  .main__content:nth-child(3) .main__content-article {
+    padding-left: 7px;
+  }
+
+  .main__content:nth-child(3) {
+    column-gap: 10px;
   }
 
   .gallery {
-    display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(3, 1fr);
+    grid-template-rows: repeat(3, min-content);
     gap: 20px;
-    max-width: 100%;
-    height: 780px;
     margin-top: 10px;
+    min-height: 780px;
   }
 
   .picture1 {
@@ -326,87 +346,62 @@
   }
 
   .footer {
-    margin-top: 60px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    margin-block-start: 60px;
+    min-height: max(1024px, 100vh);
   }
 
   .footer__title {
     font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
-  }
-
-} 
-
-@media (width: 768px) {
-
-  .header, .footer {
-    height: 1024px;
-  }
-
-  .header__title {
-    position: relative;
-    inline-size: 100%;
-    inset-inline-end: 2.7%;
-  }
-
-  .main__content {
-    display: grid;
-    grid-template-columns: 236px 1fr;
-  }
-
-  .main__content:nth-child(1) .main__content-text {
-    grid-column: 2/3;
   }
 } 
 
 @media (width>= 1024px) {
   
   .header, .footer {
-    height: 768px;
+    min-height: max(768px, 100vh);
   }
 
   .header__theme-menu {
-    grid-row: 1/2;
-    display: flex;
     justify-self: center;
     align-items: start;
     margin-bottom: 5px;
   }
 
   .header__theme-menu-list {
-    display: flex;
     flex-direction: row;
-    gap: 10px;
   }
 
   .header__title {
-    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
-    position: relative;
     inline-size: calc(100% + 40px);
-    inset-inline-end: 20px;
   }
 
-  .main__content {
-    display: grid;
-    grid-template-columns: 314.96px 1fr 1fr;
+  .main__content:nth-child(odd) {
+    gap: 10px;
   }
 
-  .main__content:nth-child(1) .main__content-text {
+  .main__content-list .main__content-text {
+    grid-column: 1 span;
+    grid-row: 1 span;
+    align-self: self-start;
+  }
+
+  .main__content-article{
     grid-column: 2/-1;
+  }
+
+  .main__content:nth-child(2) .main__content-article{
+    grid-column: 1/-1;
+    grid-row: 2/ 1 span;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
   }
 
   .main__content:nth-child(2) .main__content-text {
     grid-column: 1 span;
-    grid-row: 2/1 span;
-    align-self: self-start;
   }
 
-  .gallery {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(3, 1fr);
-    height: 1046px;
+  .main__content:nth-child(3) .main__content-article{
+    padding-left: 0;
   }
-
 } 
